# LearnARTA

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml
artifact/: Dockerfile  README.md  build_image.sh  load_image.sh
crates/learn-arta/: Cargo.toml  README.md
crates/learn-arta-cli/: Cargo.toml
crates/learn-arta-cli/src/: error.rs  main.rs
crates/learn-arta-cli/src/cmd/: compare.rs  dot.rs  learn.rs  mod.rs
crates/learn-arta-cli/tests/: compare.rs  dot.rs  learn.rs
crates/learn-arta-core/: Cargo.toml  README.md
crates/learn-arta-core/src/: dot.rs  error.rs  json.rs  lib.rs  location.rs  normalize.rs  partition.rs  timed_word.rs
crates/learn-arta-core/src/arta/: builder.rs  determinism.rs  execution.rs  mod.rs  simplify.rs
crates/learn-arta-core/src/state_formula/: dag.rs  minimal_model.rs  mod.rs  traits.rs
crates/learn-arta-core/src/time/: delay.rs  interval.rs  mod.rs  normalize.rs
crates/learn-arta-core/tests/: json_io.rs  prop_invariants.rs
crates/learn-arta-oracles/: Cargo.toml  README.md
crates/learn-arta-oracles/src/: arta_membership.rs  caching.rs  lib.rs  whitebox.rs
crates/learn-arta-oracles/tests/: arta_membership.rs  exact_whitebox_eq.rs  prop_invariants.rs
crates/learn-arta-traits/: Cargo.toml  README.md
crates/learn-arta-traits/src/: lib.rs
crates/learn-arta/src/: cohesion.rs  decomposition.rs  error.rs  evidence_afa.rs  hypothesis_arta.rs  learner.rs  lib.rs  observation_table.rs  rowvec.rs
crates/learn-arta/src/basis/: approx_milp.rs  config.rs  cover.rs  exact_milp.rs  greedy.rs  mod.rs  traits.rs
crates/learn-arta/tests/: cohesion.rs  evidence_afa.rs  hypothesis_arta.rs  learner_loop.rs  prop_invariants.rs
doc/: cli.md  reproducibility.md
doc/architecture/: workspace.md
examples/: atomic-small.json  middle.json  small.json  untimed.json
schemas/: experiment-summary.schema.json  learn-arta.schema.json
scripts/: format-json.mjs  log_to_json.sh  make_summary.sh  print_group_summary_table.py  print_summary_table.py  run.sh  run_all.sh  run_small.sh  test_print_group_summary_table.py  test_print_summary_table.py
