[workspace]
members = [
    "crates/learn-arta-core",
    "crates/learn-arta-traits",
    "crates/learn-arta",
    "crates/learn-arta-oracles",
    "crates/learn-arta-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Masaki Waga"]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MasWag/LearnARTA"

[workspace.dependencies]
thiserror = "1"
proptest = "1"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
