[package]
name = "learn-arta-oracles"
description = "Oracle implementations for LearnARTA"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/learn-arta-oracles"
readme = "README.md"
keywords = ["automata", "real-time", "learning", "verification", "arta"]
categories = ["algorithms", "science"]

[dependencies]
learn-arta-core = { path = "../learn-arta-core", version = "0.0.1" }
learn-arta-traits = { path = "../learn-arta-traits", version = "0.0.1" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
